--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <html lang="en">
-<head>
+  <head>
   <meta charset="utf-8">
 
   <title>Fun Bus Travel Agency - Solution</title>
@@ -67,7 +67,7 @@
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn" id = "firstbtn">Sign Me Up!</div>
       </div>
       <div class="destination">
         <h4>Mountain Excursion</h4>
